# 909

./: CMakeLists.txt  README.md
config/: answers.json  config.json  request.json
include/: converter_json.h  index.h  inverted_index.h  search_server.h
resources/: file1.txt  file2.txt  file3.txt
src/: converter_json.cpp  index.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: test_index.cpp  test_inverted_index.cpp
